<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for a crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="CrimeIsSolved">isSolved</string>
    <string name="CallPolice">callPolice</string>
    <string name="cb_involve_police">Involve Police</string>
    <string name="new_crime">New Crime</string>
    <string name="bt_choose_suspect">Choose Suspect</string>
    <string name="bt_send_crime_report">send crime report</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">these is not suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>