<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp"
    >

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/tvCrimeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:id="@+id/etCrimeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/tvCrimeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <CheckBox
        android:id="@+id/cbCallPolice"
        android:text="@string/cb_involve_police"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <Button
        android:id="@+id/btCrimeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/crime_details_label"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <Button
        android:id="@+id/btSetTimeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="SET TIME"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <CheckBox
        android:id="@+id/cbIsSolved"
        android:text="@string/crime_solved_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />



</androidx.appcompat.widget.LinearLayoutCompat>